--- a/css/own.css
+++ b/css/own.css
@@ -33,7 +33,7 @@ a, li, ul{
 .b-img-back{
     background-size:cover;
     background-color: #003160;
-    background-image: linear-gradient(93deg, rgb(00,19,31,1) 2%, rgba(0,31,61,.8) 5%, rgba(0,12,24,0) 55%), url(/img/BANNER-SUPERIOR.jpg);
+    background-image: linear-gradient(93deg, rgb(00,19,31,1) 2%, rgba(0,31,61,.8) 5%, rgba(0,12,24,0) 55%), url(https://alexanderosses.github.io/LANDING-DE-NEGOCIO/img/BANNER-SUPERIOR.jpg);
     background-repeat: no-repeat;
     background-size:cover;
     height: 550px;
